[package]
name = "botw-utils"
description = "A library with various utilities for modding Breath of the Wild"
repository = "https://github.com/NiceneNerd/botw-utils-rust"
documentation = "https://docs.rs/botw-utils"
readme = "README.md"
keywords = ["Nintendo", "Zelda", "gamedev"]
categories = ["game-development", "utilities"]
version = "0.4.1"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
include-flate = "0.2.0"
once_cell = "1.17"
regex = "1.4.2"
roead = { version = "0.20.2", default-features = false, features = ["yaz0", "binrw"] }
serde_json = "1"
twox-hash = "1.6.0"
